# chatsky-ui-template

./: cookiecutter.json  pyproject.toml
{{ cookiecutter.project_slug }}/: .gitignore  README.md  app.py  context_storage.py  pyproject.toml  test.py
{{ cookiecutter.project_slug }}/bot/: .gitignore
{{ cookiecutter.project_slug }}/bot/custom/: .services_index.yaml  __init__.py  conditions.py  responses.py
{{ cookiecutter.project_slug }}/bot/databases/: context_storage.db  test.db
{{ cookiecutter.project_slug }}/bot/scripts/: build.yaml  build_43.yaml
{{ cookiecutter.project_slug }}/builds/: success_build.sh
{{ cookiecutter.project_slug }}/chatsky_ui/: .gitignore
{{ cookiecutter.project_slug }}/chatsky_ui/app_data/: .gitignore  builds.yaml  frontend_flows.yaml  runs.yaml
{{ cookiecutter.project_slug }}/chatsky_ui/presets/: build.json  run.json
{{ cookiecutter.project_slug }}/df_designer/: .gitignore  builds.yaml  frontend_flows.yaml  runs.yaml
{{ cookiecutter.project_slug }}/df_designer/app_data/: builds.yaml  runs.yaml
{{ cookiecutter.project_slug }}/df_designer/presets/: build.json  run.json
{{ cookiecutter.project_slug }}/runs/: looped_run.sh  success_run.sh
